--- a/starter-code/views/layout.hbs
+++ b/starter-code/views/layout.hbs
@@ -17,8 +17,8 @@
           <button>Sign Out</button>
         </form>
         {{else}}
-        <a href="/sign-in">Sign In</a>
-        <a href="/sign-up">Sign Up</a>
+        <a href="/auth/sign-in">Sign In</a>
+        <a href="/auth/sign-up">Sign Up</a>
       {{/if}}
     </nav>
     {{{body}}}
