--- a/starter-code/views/auth/sign-up.hbs
+++ b/starter-code/views/auth/sign-up.hbs
@@ -1,4 +1,4 @@
-<form action="/sign-up" method="POST">
+<form action="/auth/sign-up" method="POST">
   <label for="input-name">Name</label>
   <input type="text" id="input-name" name="name" placeholder="Your Name" />
   <label for="input-email">Email</label>
