--- a/starter-code/views/private.hbs
+++ b/starter-code/views/private.hbs
@@ -1,1 +1,4 @@
 <h1>This page should only be accessible to authenticated users</h1>
+<h3>{{user.name}}</h3>
+<h3>{{user.email}}</h3>
+<h3>{{user.status}}</h3> 
