--- a/starter-code/views/layout.hbs
+++ b/starter-code/views/layout.hbs
@@ -12,7 +12,7 @@
       <a href="/">Home</a>
       {{!-- Display relevant routes for non-authenticated vs. authenticated user --}}
       {{#if user}}
-        <a href="/">{{user.name}}'s Profile</a>
+        <a href="/private">{{user.name}}'s Profile</a>
         <form action="/sign-out" method="POST">
           <button>Sign Out</button>
         </form>
