--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -1,1 +1,11 @@
-<p>Welcome to our Lab!</p>
+
+<h1>NODEMAILER</h1>
+<form action="/send-email" method="post">
+  <label for="">Email</label>
+  <input type="email" name="email" id="">
+  <label for="">Subject</label>
+  <input type="text" name="subject" id="">
+  <label for="">Message</label>
+  <textarea type="text" name="message" id=""></textarea>
+  <button type="submit">Submit</button>
+</form>
